2016-12-19      Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  build and link gm2l, gm2lcc using g++.
	* gm2/gm2-lang.c:  updated to reflect gcc-5.2.0 garbage collection
          of trees.
	* gm2/gm2-lang.h:  removed garbage collection info (moved into
          gm2-lang.c).
	* gm2/Make-lang.in:  add MC_LIBS to the library list when linking
          gm2l, gm2lcc, gm2lgen, gm2lorder and gm2m.
	* gm2/gm2-gcc/gcc-consolidation.h:  add conditional compilation
          to stop inclusion of gcc compiler internals if we are building
          a gm2tool program.
	* gm2/Make-lang.in:  remove h2def from being built.

2016-12-18      Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  create MC_LIBS and use them during link of
          cc1gm2.
 	* gm2/gm2-gcc/m2linemap.c:  use C style link symbols and correct
          prototype for StartFile.  Cast to char *.
	* gm2/gm2-gcc/m2linemap.h:  use __cplusplus rather than __GNUG__.
          move #include before defining EXTERN.
	* gm2/gm2-lang.c:  whitespace removal.
	* gm2/gm2-libs-ch/ldtoa.c:  removed #if surrounding _M2_ldtoa_init
          and _M2_ldtoa_finish.
	* gm2/m2.flex:  fixed to ensure external symbols are using C style.
          Use %option nounput to remove compiler warning.
	* gm2/mc-boot/Gdecl.c:  rebuilt.
	* gm2/mc/decl.mod:  bugfix, ensure that variables are declared as extern
	  when we are using getExtendedOpaque and if the variable is external.

2016-12-17      Gaius Mulley <gaius@gnu.org>

	* gm2/mc-boot/Gdecl.c:  rebuilt.
	* gm2/mc/decl.mod:  fixed bug regarding the expression type of an
          indirect funccall.  mc now builds all gm2 modules.

2016-12-16      Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  M2GCCDeclare.o dedicated rule.  mc-clean,
	  mc-maintainer mc-continue rules improved.
	* gm2/bnf/h2def.bnf:  removed usused import.
	* gm2/gm2-compiler/M2Base.mod:  remove unused global variables
	  and fixed typo (FloatS not SFloat).